--- a/ventas/templates/ventas/lista_ventas.html
+++ b/ventas/templates/ventas/lista_ventas.html
@@ -45,7 +45,7 @@
             <tr class="border-t border-gray-200 hover:bg-gray-50">
                 <td class="px-4 py-2">
                     <a href="{% url 'detalle_venta' v.id %}" class="block w-full h-full">
-                        {{ v.id }}
+                        {{ v.numero_empresa }}
                     </a>
                 </td>
                 <td class="px-4 py-2">
