--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,10 @@
     body * {
         visibility: hidden;
     }
+    @page {
+        size: auto;
+        margin: 0;
+    }
 
     .boleta, .boleta * {
         visibility: visible;
@@ -117,13 +121,13 @@
         top: 0;
         width: 240px !important; /* --> ancho real imprimible */
         background: white;
-        font-size: 12px !important;
+        font-size: 14px !important;
     }
 
     table {
         width: 100%;
         border-collapse: collapse;
-        font-size: 10px !important;
+        font-size: 12px !important;
     }
 
     th, td {
