--- a/ventas/templates/ventas/detalle_ticket.html
+++ b/ventas/templates/ventas/detalle_ticket.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <!-- Contenedor tipo ticket -->
-<div class="boleta mx-auto p-2 bg-white shadow text-[10px]" style="width: 240px; font-family: Arial, sans-serif;">
+<div class="boleta mx-auto bg-white shadow text-[10px]" style="width: 240px; font-family: Arial, sans-serif;">
 
     <!-- Encabezado de la venta -->
      <h1 class="text-center font-bold text-lg">
